# OpenDebates

./: .bumpversion.cfg  .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
docs/installation/: index.rst
opendebates/: utils.py
plugins/core/navigation/: help.py
plugins/core/startup/: login.py
plugins/debate/: __init__.py  layout.py  overwrites.py
plugins/debate/rooms/: data.py  interface.py
