[metadata]
name = opendebates
version = attr: opendebates.__version__
platforms = any

[options]
packages = find:
python_requires = >=3.7
install_requires =
    erin

[options.extras_require]
docs =
    Sphinx
    sphinx_rtd_theme
tests =
    pytest
    pytest-cov
    pytest-runner
release =
    bump2version

[options.packages.find]
include =
    opendebates
    opendebates.*

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[bumpversion]
current_version = 0.0.0
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)\.(?P<build>\d+))?
serialize =
    {major}.{minor}.{patch}-{release}.{build}
    {major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values =
  alpha
  beta
  gamma

[bumpversion:part:build]

[bumpversion:file:./OpenDebates/__init__.py]
